<resources>
    <string name="app_name">NoteApp</string>
    <string name="my_notes">Заметки</string>
    <string name="show_notes">Искать в заметках…</string>
    <string name="note_title">Название</string>
    <string name="note_subtitle">Текст</string>
    <string name="notesubtitle">Подзаголовок</string>
    <string name="type_note_here">Текст…</string>
    <string name="add_image">Добавить изображение</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="delete_or_not">Удалить заметку?</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="cancel">ОТМЕНА</string>
</resources>