<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:id='@+id/textMyNotes'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_b"
        android:includeFontPadding="true"
        android:text="@string/my_notes"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">



        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_r"
            android:hint="@string/show_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"/>

    </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:background="@color/colorPrimary"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/layoutQuickActions"
            app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />


        <LinearLayout
            android:id="@+id/layoutQuickActions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

        </LinearLayout>

        <ImageView
            android:id="@+id/mainGradient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/layoutQuickActions"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/TopGradient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/top_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />

        <ImageView
            android:id="@+id/ImageAddNoteMain"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/background_add_buttun"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/colorPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>